// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MPagination Given a lot of pages Then should render correctly 1`] = `
<div class="m-pagination">
  <div class="m-pagination__status">Page 5 de 51 - 255 résultats</div>
  <div class="m-pagination__indicator"></div>
  <div class="m-pagination__nav"><button type="button" class="m-icon-button m-pagination__previous-button m--is-skin-link m--has-ripple" style="width:44px;height:44px;"><svg aria-hidden="true" width="20px" height="20px" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
    <ul class="m-pagination__pages">
      <li class="m-pagination__item"><a href="#" tabindex="0" class="m-link m-pagination__item--link m--is-unvisited m--is-button"> <span class="m-link__text">1</span> </a></li>
      <li class="m-pagination__item m-pagination__item--ellipsis"><span class="m-pagination__item--text">...</span></li>
      <li class="m-pagination__item"><a href="#" tabindex="0" class="m-link m-pagination__item--link m--is-unvisited m--is-button"> <span class="m-link__text">4</span> </a></li>
      <li class="m-pagination__item m--is-active"><span class="m-pagination__item--text">5</span></li>
      <li class="m-pagination__item"><a href="#" tabindex="0" class="m-link m-pagination__item--link m--is-unvisited m--is-button"> <span class="m-link__text">6</span> </a></li>
      <li class="m-pagination__item m-pagination__item--ellipsis"><span class="m-pagination__item--text">...</span></li>
      <li class="m-pagination__item"><a href="#" tabindex="0" class="m-link m-pagination__item--link m--is-unvisited m--is-button"> <span class="m-link__text">51</span> </a></li>
    </ul> <button type="button" class="m-icon-button m-pagination__next-button m--is-skin-link m--has-ripple" style="width:44px;height:44px;"><svg aria-hidden="true" width="20px" height="20px" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
  </div>
</div>
`;

exports[`MPagination Given component is disabled while loading Then should render correctly 1`] = `
<div class="m-pagination m--is-loading">
  <div class="m-pagination__status">Page 5 de 51 - 255 résultats</div>
  <div class="m-pagination__indicator"></div>
  <div class="m-pagination__nav"><button disabled="disabled" type="button" class="m-icon-button m-pagination__previous-button m--is-skin-link m--has-ripple m--is-disabled" style="width:44px;height:44px;"><svg aria-hidden="true" width="20px" height="20px" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
    <ul class="m-pagination__pages">
      <li class="m-pagination__item"><a href="#" tabindex="-1" class="m-link m-pagination__item--link m--is-unvisited m--is-disabled m--is-button"> <span class="m-link__text">1</span> </a></li>
      <li class="m-pagination__item m-pagination__item--ellipsis"><span class="m-pagination__item--text">...</span></li>
      <li class="m-pagination__item"><a href="#" tabindex="-1" class="m-link m-pagination__item--link m--is-unvisited m--is-disabled m--is-button"> <span class="m-link__text">4</span> </a></li>
      <li class="m-pagination__item m--is-active"><span class="m-pagination__item--text">5</span></li>
      <li class="m-pagination__item"><a href="#" tabindex="-1" class="m-link m-pagination__item--link m--is-unvisited m--is-disabled m--is-button"> <span class="m-link__text">6</span> </a></li>
      <li class="m-pagination__item m-pagination__item--ellipsis"><span class="m-pagination__item--text">...</span></li>
      <li class="m-pagination__item"><a href="#" tabindex="-1" class="m-link m-pagination__item--link m--is-unvisited m--is-disabled m--is-button"> <span class="m-link__text">51</span> </a></li>
    </ul> <button disabled="disabled" type="button" class="m-icon-button m-pagination__next-button m--is-skin-link m--has-ripple m--is-disabled" style="width:44px;height:44px;"><svg aria-hidden="true" width="20px" height="20px" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
  </div>
</div>
`;

exports[`MPagination Given enough items to have more than 1 page Then should render correctly 1`] = `
<div class="m-pagination">
  <div class="m-pagination__status">Page 1 de 3 - 50 résultats</div>
  <div class="m-pagination__indicator"></div>
  <div class="m-pagination__nav"><button disabled="disabled" type="button" class="m-icon-button m-pagination__previous-button m--is-skin-link m--has-ripple m--is-disabled" style="width:44px;height:44px;"><svg aria-hidden="true" width="20px" height="20px" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
    <ul class="m-pagination__pages">
      <li class="m-pagination__item m--is-active"><span class="m-pagination__item--text">1</span></li>
      <li class="m-pagination__item"><a href="#" tabindex="0" class="m-link m-pagination__item--link m--is-unvisited m--is-button"> <span class="m-link__text">2</span> </a></li>
      <li class="m-pagination__item"><a href="#" tabindex="0" class="m-link m-pagination__item--link m--is-unvisited m--is-button"> <span class="m-link__text">3</span> </a></li>
    </ul> <button type="button" class="m-icon-button m-pagination__next-button m--is-skin-link m--has-ripple" style="width:44px;height:44px;"><svg aria-hidden="true" width="20px" height="20px" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
  </div>
</div>
`;

exports[`MPagination Given only 1 page of results Then should render correctly 1`] = `
<div class="m-pagination">
  <div class="m-pagination__status">Page 1 de 1 - 10 résultats</div>
</div>
`;

exports[`MPagination Given showing less item per page Then should render correctly 1`] = `
<div class="m-pagination">
  <div class="m-pagination__status">Page 1 de 10 - 50 résultats</div>
  <div class="m-pagination__indicator"></div>
  <div class="m-pagination__nav"><button disabled="disabled" type="button" class="m-icon-button m-pagination__previous-button m--is-skin-link m--has-ripple m--is-disabled" style="width:44px;height:44px;"><svg aria-hidden="true" width="20px" height="20px" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
    <ul class="m-pagination__pages">
      <li class="m-pagination__item m--is-active"><span class="m-pagination__item--text">1</span></li>
      <li class="m-pagination__item"><a href="#" tabindex="0" class="m-link m-pagination__item--link m--is-unvisited m--is-button"> <span class="m-link__text">2</span> </a></li>
      <li class="m-pagination__item"><a href="#" tabindex="0" class="m-link m-pagination__item--link m--is-unvisited m--is-button"> <span class="m-link__text">3</span> </a></li>
      <li class="m-pagination__item"><a href="#" tabindex="0" class="m-link m-pagination__item--link m--is-unvisited m--is-button"> <span class="m-link__text">4</span> </a></li>
      <li class="m-pagination__item m-pagination__item--ellipsis"><span class="m-pagination__item--text">...</span></li>
      <li class="m-pagination__item"><a href="#" tabindex="0" class="m-link m-pagination__item--link m--is-unvisited m--is-button"> <span class="m-link__text">10</span> </a></li>
    </ul> <button type="button" class="m-icon-button m-pagination__next-button m--is-skin-link m--has-ripple" style="width:44px;height:44px;"><svg aria-hidden="true" width="20px" height="20px" class="m-icon m-icon-button__icon">
        <use aria-hidden="true"></use>
      </svg> </button>
  </div>
</div>
`;
